Add background image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="banner-title">ODIN</h1>
     </div>
     <div class="bg-footer">
-      Photo by Halie West on Unsplash
+      Photo by <a href="https://unsplash.com/photos/25xggax4bSA">Halie West</a> on <a href="https://unsplash.com/">Unsplash</a>
     </div>
   </div>
   <div class="container-right">
