Style left container

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <div class="container-left">
     <div class="banner">
-      <h1 class="banner-title">ODIN</h1>
+      <img src="odin-icon.svg" alt="Odin Logo">
+      <div class="banner-title">ODIN</div>
     </div>
     <div class="bg-footer">
       Photo by <a href="https://unsplash.com/photos/25xggax4bSA">Halie West</a> on <a href="https://unsplash.com/">Unsplash</a>
