--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
           </div>
           <div class="form-group">
             <label for="password">PASSWORD</label><br>
-            <input type="password" name="password" id="password">
+            <input type="password" name="password" id="password" class="error" required>
           </div>
           <div class="form-group">
             <label for="confirm">CONFIRM PASSWORD</label><br>
-            <input type="password" name="confirm" id="confirm">
+            <input type="password" name="confirm" id="confirm" class="error" required>
           </div>
         </div>
 
